--- a/src/Components/Footer/footer.module.scss
+++ b/src/Components/Footer/footer.module.scss
@@ -1,5 +1,7 @@
-footer {
+.footer {
   padding: 30px 0;
+  max-width: 1000px;
+  margin: auto;
   .upSideInFooter {
     display: flex;
     justify-content: space-between;
